add router register
